--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,9 @@ AllCops:
   TargetRubyVersion: 3.0
   Exclude:
     - "Gemfile"
+    - "vendor/**/**"
   NewCops: enable
+  SuggestExtensions: false
 
 Metrics/BlockLength:
   Exclude:
